Improve visualization library (#802)
It does the following:
- It adds a camera animator to move the camera via the mouse
- It fixes the aspect ratio to avoid strange effects when resizing
- It adds an interface to add custom frames to the visualization
- It fixes the floor grid colors
- It adds an interface to have additional rendering target textures (helpful if you need to render to a different size with a different environment and to get the pixels of the corresponding image)
- It fixes the visualizations of ``STL`` meshes.

--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -12,17 +12,25 @@ if(IDYNTREE_USES_IRRLICHT)
     # Some files are compiled only when irrlicht is available
     set(iDynTree_visualization_private_headers src/IrrlichtUtils.h
                                                src/Camera.h
+                                               src/CameraAnimator.h
                                                src/Environment.h
                                                src/ModelVisualization.h
                                                src/JetsVisualization.h
                                                src/VectorsVisualization.h
+                                               src/FrameVisualization.h
+                                               src/Texture.h
+                                               src/TexturesHandler.h
                                                src/Light.h
                                                src/FloorGridSceneNode.h)
     set(iDynTree_visualization_private_source  src/Camera.cpp
+                                               src/CameraAnimator.cpp
                                                src/Environment.cpp
                                                src/ModelVisualization.cpp
                                                src/JetsVisualization.cpp
                                                src/VectorsVisualization.cpp
+                                               src/FrameVisualization.cpp
+                                               src/Texture.cpp
+                                               src/TexturesHandler.cpp
                                                src/Light.cpp
                                                src/FloorGridSceneNode.cpp)
 endif()
@@ -72,10 +80,10 @@ if(IDYNTREE_USES_IRRLICHT)
 
     # On Apple system, irrlicht uses some system libraries
     if (APPLE)
-    	find_library(CARBON_LIBRARY Carbon)
-    	find_library(COCOA_LIBRARY Cocoa)
-    	find_library(IOKIT_LIBRARY IOKit)
-    	target_link_libraries(${libraryname} LINK_PRIVATE ${CARBON_LIBRARY} ${COCOA_LIBRARY} ${IOKIT_LIBRARY})
+        find_library(CARBON_LIBRARY Carbon)
+        find_library(COCOA_LIBRARY Cocoa)
+        find_library(IOKIT_LIBRARY IOKit)
+        target_link_libraries(${libraryname} LINK_PRIVATE ${CARBON_LIBRARY} ${COCOA_LIBRARY} ${IOKIT_LIBRARY})
     endif ()
 endif()
 
