Transform idyntree-yarp and idyntree-icub in header only libraries (#807)
* Transform idyntree-yarp and idyntree-icub to header only libraries

The `idyntree-yarp` and `idyntree-icub` libraries are now header-only, and are always installed even if
`IDYNTREE_USES_YARP` or `IDYNTREE_USES_ICUB_MAIN` are set to `OFF`, to simplify deployment of the library.
The downstream libraries that want to use them need to find and link `YARP` and `ICUB` CMake packages on their own.

--- a/src/tests/yarp_benchmark/CMakeLists.txt
+++ b/src/tests/yarp_benchmark/CMakeLists.txt
@@ -10,7 +10,7 @@ macro(add_yarp_benchmark benchmarkName)
     set(testsrc ${benchmarkName}Benchmark.cpp)
     set(testbinary ${benchmarkName}Benchmark)
     add_executable(${testbinary} ${testsrc})
-    target_link_libraries(${testbinary} PRIVATE idyntree-icub idyntree-core idyntree-model idyntree-testmodels Eigen3::Eigen)
+    target_link_libraries(${testbinary} PRIVATE idyntree-icub idyntree-core idyntree-model idyntree-testmodels Eigen3::Eigen YARP::YARP_sig  YARP::YARP_math)
 endmacro()
 
 add_yarp_benchmark(PseudoInverse)
