--- a/bindings/matlab/tests/CMakeLists.txt
+++ b/bindings/matlab/tests/CMakeLists.txt
@@ -6,7 +6,8 @@ add_custom_command(TARGET copy_matlab_model_in_build PRE_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy
                             ${CMAKE_CURRENT_SOURCE_DIR}/model.urdf ${CMAKE_CURRENT_BINARY_DIR}/model.urdf)
 
-if (IDYNTREE_USES_MATLAB)
+option(IDYNTREE_DISABLE_MATLAB_TESTS "If ON, disable MATLAB tests enve if IDYNTREE_USES_MATLAB and the option to compile tests are both on" OFF)
+if (IDYNTREE_USES_MATLAB AND NOT IDYNTREE_DISABLE_MATLAB_TESTS)
   find_package(Matlab REQUIRED
                COMPONENTS MAIN_PROGRAM)
   add_test(NAME matlab_idyntree_tests
