--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,13 @@ jobs:
         cd build
         cmake --build . --config ${{ matrix.build_type }}
 
+    - name: Inspect libraries linked by iDynTreeMEX.mexa64 [Conda/Linux]
+      if: contains(matrix.os, 'ubuntu')
+      shell: bash -l {0}
+      run: |
+        cd build
+        ldd ./lib/iDynTreeMEX.mexa64
+
     - name: Test [Conda]
       shell: bash -l {0}
       run: |
@@ -315,6 +322,7 @@ jobs:
         # See https://github.com/robotology/idyntree/issues/569
         export PATH=$PATH:${GITHUB_WORKSPACE}/install/bin:${VCPKG_INSTALLATION_ROOT}/installed/x64-windows/bin:${VCPKG_INSTALLATION_ROOT}/installed/x64-windows/debug/bin
         cmake --build . --config ${{ matrix.build_type }}
+  
         
     - name: Test
       shell: bash
