--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -39,8 +39,7 @@ jobs:
     - name: Deploy
       if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/devel')
       uses: JamesIves/github-pages-deploy-action@4.1.1
-      env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: deploy
-        
+      with:
+        branch: gh-pages
+        folder: deploy
+        token: ${{ secrets.ACCESS_TOKEN }}
