--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -14,8 +14,9 @@ if(IDYNTREE_BINDINGS_BUILD_STANDALONE)
   find_package(iDynTree REQUIRED)
   set(IDYNTREE_LIBRARIES ${iDynTree_LIBRARIES})
   # Set variables that are set in extern
-  set(IDYNTREE_INTERNAL_MOXUNIT_PATH "../extern/MOxUnit/MOxUnit")
-  set(IDYNTREE_INTERNAL_MESH2TRI_PATH "../extern/mesh2tri")
+  get_filename_component(PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
+  set(IDYNTREE_INTERNAL_MOXUNIT_PATH "${PARENT_DIR}/extern/MOxUnit/MOxUnit")
+  set(IDYNTREE_INTERNAL_MESH2TRI_PATH "${PARENT_DIR}/extern/mesh2tri")
 else()
   get_property(IDYNTREE_LIBRARIES GLOBAL PROPERTY ${VARS_PREFIX}_TARGETS)
 endif()
