--- a/bindings/matlab/CMakeLists.txt
+++ b/bindings/matlab/CMakeLists.txt
@@ -134,6 +134,7 @@ if(IDYNTREE_USES_MATLAB)
       DESTINATION ${CMAKE_INSTALL_PREFIX}/${IDYNTREE_INSTALL_MATLAB_MFILESDIR})
 
   # Install the matlab-visualization-external-functions
+  message(STATUS "IDYNTREE_INTERNAL_MESH2TRI_PATH: ${IDYNTREE_INTERNAL_MESH2TRI_PATH}")
   install(
       FILES ${IDYNTREE_INTERNAL_MESH2TRI_PATH}/mesh2tri.m
       DESTINATION ${CMAKE_INSTALL_PREFIX}/${IDYNTREE_INSTALL_MATLAB_MFILESDIR})
