--- a/bindings/matlab/CMakeLists.txt
+++ b/bindings/matlab/CMakeLists.txt
@@ -102,8 +102,8 @@ endif()
 if(IDYNTREE_USES_MATLAB)
   find_package(Matlab REQUIRED)
   message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
-  if(NOT TARGET Matlab::mx)
-    message(FATAL_ERROR "Missing required target Matlab::mx)
+  if(NOT TARGET Matlab::mex)
+    message(FATAL_ERROR "Missing required target Matlab::mex")
   endif()
 
   set(target_name ${mexname})
