Rename iDynTree::idyntree-modelio-urdf imported cmake target in iDynTree::idyntree-modelio target

--- a/bindings/pybind11/CMakeLists.txt
+++ b/bindings/pybind11/CMakeLists.txt
@@ -9,7 +9,7 @@ pybind11_add_module(pybind11_idyntree SYSTEM idyntree.cpp
 target_link_libraries(pybind11_idyntree PUBLIC idyntree-core
                                                idyntree-model
                                                idyntree-sensors
-                                               idyntree-modelio-urdf)
+                                               idyntree-modelio)
 
 # The generated Python dynamic module must have the same name as the pybind11
 # module, i.e. `bindings`.
