--- a/src/model_io/codecs/tests/CMakeLists.txt
+++ b/src/model_io/codecs/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ macro(add_modelio_urdf_unit_test classname)
     set(testbinary ${classname}UnitTest)
     set(testname   UnitTest${classname})
     add_executable(${testbinary} ${testsrc})
-    target_link_libraries(${testbinary} PRIVATE idyntree-modelio-urdf idyntree-testmodels Eigen3::Eigen)
+    target_link_libraries(${testbinary} PRIVATE idyntree-modelio idyntree-testmodels Eigen3::Eigen)
     add_test(NAME ${testname} COMMAND ${testbinary})
 
     if(IDYNTREE_RUN_VALGRIND_TESTS)
