Ask for doxygen 1.9.1 in gh-page workflow

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
           conda config --remove channels defaults
 
           # Dependencies
-          mamba install doxygen toml pygments docutils jinja2
+          mamba install doxygen=1.9.1 toml pygments docutils jinja2
 
       - name: Fetch m.css
         shell: bash -l {0}
